removed overflow hidden on html body that was causing scroll issues

--- a/app/globals.css
+++ b/app/globals.css
@@ -22,7 +22,6 @@ html,
 body {
   height: 100%;
   max-width: 100vw;
-  overflow: hidden; /* Prevent scrolling on html/body */
 }
 
 body {
